<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:text="@string/how_do_i_earn_coins"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/it_is_easy_complete_different"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/i_completed_the_task_but_didn_t_get_my_coins"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/most_of_the_time"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/i_requested_a_gift_card_how_long_will_i_have_to_wait"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/redemption_of_the_gift_card_usually_takes_1_2_days"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/already_have"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/we_don_t_have_such_opportunity_at_the_moment"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/i_don_t_have_any_tasks_to_complete"
                android:textColor="@android:color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/near_future"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
